--- a/css/product.css
+++ b/css/product.css
@@ -1745,3 +1745,25 @@ td {
  
 
  }
+
+
+ @media screen and (min-width: 400px) and (max-width:430px){
+
+    .login_menu ul{
+        margin-left: 320px ; 
+    }
+   
+    
+    .fa-shopping-cart,.fa-user
+    {
+        font-size: 18px !important;
+    }
+
+    .input-group{
+        width: 280px !important;
+    }
+
+
+ }
+
+ 
