--- a/css/category.css
+++ b/css/category.css
@@ -1489,6 +1489,137 @@ a:hover {
 
 
 
+ 
+ @media screen and (min-width: 400px) and (max-width:430px){
+
+    .login_menu ul{
+        margin-left: 320px ; 
+    }
+   
+    
+    .fa-shopping-cart,.fa-user
+    {
+        font-size: 18px !important;
+    }
+
+    .input-group{
+        width: 280px !important;
+    }
+
+
+ }
+
+
+ @media screen and (min-width: 431px) and (max-width:462px){
+
+    .login_menu ul{
+        margin-left: 350px ; 
+    }
+   
+    
+    .fa-shopping-cart,.fa-user
+    {
+        font-size: 15px !important;
+    }
+
+    .input-group{
+        width: 300px !important;
+    }
+
+
+ }
+
+ @media screen and (min-width: 463px) and (max-width:500px){
+
+    .login_menu ul{
+        margin-left: 389px ; 
+    }
+   
+    
+    .fa-shopping-cart,.fa-user
+    {
+        font-size: 15px !important;
+    }
+
+    .input-group{
+        width: 350px !important;
+    }
+
+
+ }
+
+ @media screen and (min-width: 501px) and (max-width:600px){
+
+    .login_menu ul{
+        margin-left: 420px ; 
+    }
+   
+    
+    .fa-shopping-cart,.fa-user
+    {
+        font-size: 15px !important;
+    }
+
+    .input-group{
+        width: 380px !important;
+    }
+
+
+ }
+
+ @media screen and (max-width:320px){
+    .s1 {
+        background-size: 380% !important;
+      }
+      #hero{
+          height: 600px !important;
+      }
+
+    .login_menu ul{
+        margin-left: 250px ; 
+    }
+   
+    
+    .fa-shopping-cart,.fa-user
+    {
+        font-size: 12px !important;
+    }
+
+    .input-group{
+        width: 200px !important;
+    }
+
+
+ }
+
+
+
+ 
+ @media screen and (min-width:600px) and (max-width:1024px){
+
+ .s1 {
+    background-size: 200% !important;
+  }
+  #hero{
+      height: 700px !important;
+  }
+}
+
+
+@media screen and (min-width:375px) and (max-width:450px){
+
+    .s1 {
+       background-size: 300% !important;
+     }
+     #hero{
+         height: 700px !important;
+     }
+   }
+   
+
+
+
+
 
 
 
@@ -1524,3 +1655,7 @@ a:hover {
     margin-top: -50px;
      
 }
+
+
+
+ 
