--- a/css/profile.css
+++ b/css/profile.css
@@ -987,6 +987,26 @@ a:hover {
 
 
 
+@media screen and (min-width: 400px) and (max-width:430px){
+
+    .login_menu ul{
+        margin-left: 320px ; 
+    }
+   
+    
+    .fa-shopping-cart,.fa-user
+    {
+        font-size: 18px !important;
+    }
+
+    .input-group{
+        width: 280px !important;
+    }
+
+
+ }
+
+
 
 
  
