--- a/css/category.css
+++ b/css/category.css
@@ -1426,8 +1426,8 @@ a:hover {
  }
 
 
- .main{
-     margin-top: -70px !important;
+ .input-group{
+     margin-top: -25px !important;
  }
  .toggle_icon{
     margin-top: -60px !important;
