--- a/css/mycart.css
+++ b/css/mycart.css
@@ -676,9 +676,8 @@ a:hover {
     }
 
 
-    .main{
+    .input-group{
         margin-top: -70px !important;
-        
     }
     .toggle_icon{
         margin-top: -60px !important;
