--- a/css/profile.css
+++ b/css/profile.css
@@ -814,10 +814,15 @@ a:hover {
     }
 
 
-    .main{
+    .input-group{
         margin-top: -70px !important;
-        
     }
+
+    .input-group.scrolled{
+        margin-top: -30px !important;
+    }
+
+
     .toggle_icon{
         margin-top: -60px !important;
     }
