--- a/css/style.css
+++ b/css/style.css
@@ -1427,8 +1427,8 @@ a:hover {
  }
 
 
- .main{
-     margin-top: -70px !important;
+ .input-group{
+     margin-top: -50px !important;
  }
  .toggle_icon{
     margin-top: -60px !important;
